--- a/src/ui.html
+++ b/src/ui.html
@@ -550,7 +550,7 @@
   <div class="container">
     <h2 style="padding-bottom: 10px;">Table Generator 2.0</h2>
     <div id="landingPage">
-      <p style="padding-bottom: 10px;">Select a table cell component in Figma, then configure your table</p>
+      <p style="padding-bottom: 10px;">Select a table cell component in Figma</p>
     </div>
 
     <div id="statusMessage" class="status">
