removed apply to row option for header, fixed footer property issues, reorder apply to column and row for body elements

--- a/src/ui.html
+++ b/src/ui.html
@@ -302,10 +302,10 @@
 
     .ai-data-section {
       margin-top: 15px;
-      padding: 12px;
+      /* padding: 12px; */
       background-color: var(--bg-secondary);
       border-radius: 6px;
-      border: 1px solid var(--border-color);
+      /* border: 1px solid var(--border-color); */
     }
 
     .ai-data-section h4 {
@@ -633,8 +633,8 @@
 
       <div class="apply-options">
         <div class="apply-option" data-apply="cell">Apply to cell</div>
-        <div class="apply-option" data-apply="row">Apply to row</div>
         <div class="apply-option active" data-apply="column">Apply to column</div>
+        <div class="apply-option" data-apply="row">Apply to row</div>
       </div>
 
       <div class="property-section" id="staticPropertySection">
